deploy/k8s/overlays/dev/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app
spec:
  rules:
    - host: voting-dev.example.com
      http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: vote-api
                port:
                  number: 8080
          - path: /results
            pathType: Prefix
            backend:
              service:
                name: results-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
